exercício obrigatório semana3

--- a/04_AUT_EST_EX_OBRIGATORIOS/Semana 3/lançamento_vertical.html
+++ b/04_AUT_EST_EX_OBRIGATORIOS/Semana 3/lançamento_vertical.html
@@ -23,6 +23,7 @@
             num = document.getElementById("vi").value;
             tempo = num / 10;
 
+            hmax = num ** 2 / (2 * 10);
             //alert(hmax);
             //console.log(tempo);
             document.getElementById("text").innerHTML = "A altura máxima é: " + hmax + " .E o tempo para chegar na altura máxima é: " + tempo;
